@@ -4,7 +4,9 @@ rex (0.2.0) unstable; urgency=low
   * added stat() function
   * added is_file() function
   * added is_dir() function
- -- Jan Gehring <jan.gehring@gmail.com>  Tue, 01 Feb 2011 20:45:00 +0200
+  * added is_readable() function
+  * added is_writable() function and an alias is_writeable()
+ -- Jan Gehring <jan.gehring@gmail.com>  Tue, 01 Feb 2011 22:50:00 +0200
 
 rex (0.1.2) unstable; urgency=low
   * fixed bug with public_key and private_key
